# popcornbot

./: LICENSE  README.md  pyproject.toml
src/popcornbot/: __about__.py  __init__.py  main.py
