[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popcornbot"
dynamic = ["version"]
description = "A bot for Maisy's Movie Club."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Benjamin Wheeler", email = "benjaminwheeler0510@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"aiohappyeyeballs==2.4.3",
	"aiohttp==3.11.7",
	"aiosignal==1.3.1",
	"attrs==24.2.0",
	"discord.py==2.4.0",
	"frozenlist==1.5.0",
	"idna==3.10",
	"multidict==6.1.0",
	"propcache==0.2.0",
	"yarl==1.18.0",
	"python-dotenv==1.0.1",
]

[project.urls]
Documentation = "https://github.com/Benjamin Wheeler/popcornbot#readme"
Issues = "https://github.com/Benjamin Wheeler/popcornbot/issues"
Source = "https://github.com/Benjamin Wheeler/popcornbot"

[project.scripts]
popcornbot = "popcornbot.main:main"

[tool.hatch.version]
path = "src/popcornbot/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/popcornbot tests}"

[tool.coverage.run]
source_pkgs = ["popcornbot", "tests"]
branch = true
parallel = true
omit = [
  "src/popcornbot/__about__.py",
]

[tool.coverage.paths]
popcornbot = ["src/popcornbot", "*/popcornbot/src/popcornbot"]
tests = ["tests", "*/popcornbot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
